--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "angat-sining.github.io/cultural-tourism",
   "name": "cultural-tourism",
   "private": true,
   "version": "0.0.0",
