trying to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://angat-sining.github.io/cultural-tourism",
+  "homepage": "https://angat-sining.github.io",
   "name": "cultural-tourism",
   "private": true,
   "version": "0.0.0",
